# BLazy

./: .gitignore  README.md  WEBTEST.py  config.py  load_constants.py  loop.py  loop_WEB.py  loop_gfix.py  loop_live.py  loop_live_new.py  looptemp.py  messages.json  messages2.json  pyproject.toml  random_data.csv  system_prompt.md  temp  temp.txt  truncated_messages.csv
.devcontainer/: devcontainer.json
cache/: constants.json
llm_gen_code/: from_pathlib_import_Path_20250105_160821.py  import_os_20250105_160759.py  import_os_20250105_162712.py  import_os_20250105_194327.py
prompts/: acsalestracker.md  balinventoryfix.md  blazie.md  blazie2.md  budget.md  codeorganize.md  create_module.md  flasktermin.md  mathgame.md  mathpygame.md  nerfResearch.md  nerf_research.md  planmath.md  prompt copy.md  promptcodemanip.md  pygamedemo.md  trackapp.md  userinter.md  vineppo.md  washer.md  wintest.md
repo/vineppo/: hello.py  pyproject.toml
system_prompt/: system_prompt.md
templates/: index.html  indexOG.html
tools/: Untitled-1.ipynb  __init__.py  base.py  bash.md  bash.py  code_context_manager.py  code_tools.py  collection.py  eample_results.json  edit.py  example_tool.py  expert.py  file_path_manager.py  function_schema.py  gotourl_reports.py  main.py  output_manager.py  script.ps1  test.ipynb  test_bash.py  test_edit.py  test_navigation_tool.py  untool.py  venvsetup.py  windows_navigation.py  windows_shortcuts.json
tools/llm_gen_code/: from_pathlib_import_Path_20241217_224349.py  from_pathlib_import_Path_20241219_143719.py  from_pathlib_import_Path_20241227_150948.py  import_os_20241217_224121.py  import_os_20241217_224310.py  import_os_20241219_142635.py  (+14 more)
utils/: agent_display.py  output_manager.py
